--- a/src/pages/random/random.css
+++ b/src/pages/random/random.css
@@ -12,6 +12,7 @@
     padding-bottom: 5vh;
     border: solid 7px black;
     background-color: white;
+    height: 570px;
 }
 
 .randomTitle {
